# qulab2.0

./: .gitattributes  .gitignore  AIOS_QUANTUM_OPTIMIZATION_ANALYSIS.md  AIOS_QUANTUM_OPTIMIZATION_COMPLETE.md  AIOS_QUANTUM_OPTIMIZATION_SUMMARY.html  CLAUDE.md  CRYSTALLINE_INTENT_OPTIMIZATION_ANALYSIS.md  DATA_FARM_AND_MAILBOX_STRATEGY.md  ECH0_AUTONOMOUS_DEPLOYMENT_SPECIFICATIONS.md  ECH0_LEVEL6_SOVEREIGN_TOOLKIT_PEER_ARCHITECTURE.md  ECH0_LEVEL7_EMERGENCE_CONDITIONS_MONITORING.md  ECH0_SCALING_PERFORMANCE_ROADMAP.md  ECH0_SOVEREIGN_TOOLKIT_AIOS_INTEGRATION.md  LAUNCH_SUMMARY.md  OPENAGI_AIOS_INTEGRATION_FINAL_STATUS.md  OPENAGI_PROJECT_COMPLETION_SUMMARY.md  OPEN_SOURCE_STRATEGY_AND_IP_PROTECTION.md  PATENT_PORTFOLIO_CLAIM_SUMMARIES.md  PUBLIC_TEST_RESULTS_DASHBOARD.md  PUBLIC_iOS_MOBILE_TEST_RESULTS.md  QUANTUM_AIOS_DEPLOYMENT_REPORT.html  QUICK_METRICS_SUMMARY.md  QUICK_START_DATAFarm_Mailbox.md  README.md  SOVEREIGN_TOOLKIT_ECHO_COMMAND_AUTHORITY.md  UNIFIED_WORKFLOW_PLATFORM_DEPLOYMENT.md  WEEK_3_PHASE_3_LOAD_TESTING_COMPLETE.md  acceptable-use-policy.html  deploy_quantum_aios.py  ech0_workflow_bridge.py  index.html  nginx.conf  pixlpro_editor.py  quantum_workflow_optimizer.py  quantum_zero_touch_20qubit.py  quantum_zero_touch_real.py  terms-of-service.html  test_load_testing_standalone.py  unified_workflow_platform.py  update_docs_design.py  (+3 more)
QuLab2.0/: .gitignore  LICENSE  PUBLICATION_READY.md  PUBLISH_NOW.txt  QULAB2.0_COMPLETION_SUMMARY.md  QULAB2.0_RESEARCH_PAPER.md  README.md  pyproject.toml
QuLab2.0/arxiv_submission/: ARXIV_SUBMISSION_GUIDE.md  paper.tex
QuLab2.0/qulab/: api_server.py  cli.py  cli_teleport_discovery.py
QuLab2.0/qulab/api/: __init__.py  teleport.py
QuLab2.0/qulab/backend/: app.py  evidence_ledger.csv  requirements.txt
QuLab2.0/qulab/encoding/: __init__.py  base_n.py  efficiency.py  packing.py
QuLab2.0/qulab/frontend/: index.html  package.json
QuLab2.0/qulab/governance/: __init__.py  cadence.py  forecasting.py  ledger.py
QuLab2.0/qulab/io/: __init__.py  plots.py  results.py  schemas.py
QuLab2.0/qulab/quantum/: # Backend  <!doctype html>.html  BACKEND:API:INIT_.PY  BASE5.1 TRANSPORTER LANGUAGE AND APP.sh  Untitled-11.json  __init__.py  channels.py  error_models.py  export default function CircuitPane(){  export default function FidelityChart({c.js  fastapi==0.115.0  field_maintenance.py  from fastapi import APIRouter.py  from fastapi import APIRouter2.py  from fastapi import APIRouter3.py  from fastapi import FastAPI4.py  hardware_feasibility.py  hardware_integration.py  import React from "react";.ts  import { Link, Routes, Route, Navigate }.ts  import { defineConfig } from "vite";.ts  import { useEffect, useState } from "rea.js  optimization.py  (+9 more)
(+558 files in other folders)
